--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,4 +1,12 @@
-@import 'global';
-@import 'mixins';
-@import 'header';
-@import 'footer';
+@import 'utilities/variables';
+@import 'utilities/mixins';
+@import 'utilities/functions';
+@import 'home/home';
+@import 'layout/navbar';
+@import 'layout/footer';
+@import 'home/home';
+@import 'home/mediaq';
+@import 'blog/blog';
+@import 'blog/mediaq';
+@import 'contact/contact';
+@import 'contact/mediaq';
