navbar for pc completed, home css in progress, and more mixins!

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,10 +1,12 @@
 @import 'utilities/variables';
 @import 'utilities/mixins';
 @import 'utilities/functions';
+@import 'utilities/global';
 @import 'home/home';
 @import 'layout/navbar';
+@import 'layout/nav-mediaq';
 @import 'layout/footer';
-@import 'home/home';
+@import 'layout/foot-mediaq';
 @import 'home/mediaq';
 @import 'blog/blog';
 @import 'blog/mediaq';
