--- a/styles/sass/home/_home.scss
+++ b/styles/sass/home/_home.scss
@@ -1,7 +1,141 @@
-h1 {
-    color: green;
+// header
+
+.home-background {
+    background: url(../shoe-kloset/header-image.jpg);
+    @include hero-style;
+    
+    // h1
+    h1 {
+    @include h1-font;
+    width: 25%;
+    margin-top: 8rem;
+    margin-left: 12rem;
+    }
+    
+    // Overlapped image
+    .home-box-header {
+    margin-top: -24rem;
+    z-index: 15;
+    display: flex;
+    justify-content: flex-end;
+}
 }
 
-h2 {
-    color: slateblue;
+
+
+// Under the Sea
+.under-the-sea {
+    background-color: $pink;
+    height: 42vw;
+    margin-top: -1.3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    // Headings
+    .text-container {
+        margin: 350px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h4 {
+            @include h4-font;
+            margin: 2rem 0 2rem 0;
+        }
+        p {
+            font-family: $content-font;
+            font-size: 23px;
+            line-height: 1.5;
+            text-align: center;
+        }
+
+        // Find out more
+        a {
+            background-color: $plum;
+            color: $white;
+            letter-spacing: 1px;
+            text-decoration: none;
+            text-transform: uppercase;
+            padding: 18px 28px;
+            margin: 1rem 0 0 0;
+            width: 250px;
+            transition: ease 0.1s;
+            font: {
+                family: $content-font;
+                size: 22.5px;
+                weight: 400;
+            }
+        }
+
+        a:hover {
+            color: $white;
+            background-color: $orange;
+        }
+    }
+}
+
+
+.rm-wrapper {
+    background-color: $white;
+    height: 53vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 250px;
+    .rm-container1, .rm-container2 {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        h6 {
+            @include h6-font;
+            text-transform: uppercase;
+        }
+    }
+}
+
+.rm-container1 {
+    img {
+        margin-top: -3rem;
+        margin-right: 1.7rem;
+        box-shadow: 3rem 3rem 0px $orange;
+    }
+    h6 {
+        border: solid 2px $plum;
+        text-align: right;
+        margin: 10rem 0 1rem 0;
+    }
+    p {
+        border: solid 2px $plum;
+        font-family: $content-font;
+        line-height: 1.5;
+        font-size: 24px;
+        text-align: right;
+        margin: 0 0 0 12rem;
+    }
+    a {
+        border: solid 2px $plum;
+        @include read-more-button;
+        text-align: right;
+    }
+}
+
+.rm-container2 {
+    img {
+        margin-top: 8rem;
+        box-shadow: -3rem 3rem 0px $orange;
+    }
+    h6 {
+        border: solid 2px $plum;
+        text-align: right;
+    }
+    p {
+        border: solid 2px $plum;
+        text-align: right;
+    }
+    a {
+        border: solid 2px $plum;
+        text-align: right;
+    }
 }
