--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,499 @@
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+html {
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+article, aside, footer, header, nav, section {
+  display: block;
+}
+
 h1 {
-  color: green;
+  font-size: 2em;
+  margin: .67em 0;
 }
 
-h2 {
-  color: slateblue;
+figcaption, figure, main {
+  display: block;
 }
 
-p {
-  color: salmon;
+figure {
+  margin: 1em 40px;
+}
+
+hr {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+pre {
+  font-family: monospace,monospace;
+  font-size: 1em;
+}
+
+a {
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+}
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+}
+
+b, strong {
+  font-weight: inherit;
+}
+
+b, strong {
+  font-weight: bolder;
+}
+
+code, kbd, samp {
+  font-family: monospace,monospace;
+  font-size: 1em;
+}
+
+dfn {
+  font-style: italic;
+}
+
+mark {
+  background-color: #ff0;
+  color: #000;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -.25em;
+}
+
+sup {
+  top: -.5em;
+}
+
+audio, video {
+  display: inline-block;
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+img {
+  border-style: none;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+button, input, optgroup, select, textarea {
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button, input {
+  overflow: visible;
+}
+
+button, select {
+  text-transform: none;
+}
+
+button, html [type=button], [type=reset], [type=submit] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  padding: .35em .75em .625em;
+}
+
+legend {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+progress {
+  display: inline-block;
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type=checkbox], [type=radio] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+}
+
+[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type=search] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+[type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+details, menu {
+  display: block;
+}
+
+summary {
+  display: list-item;
+}
+
+canvas {
+  display: inline-block;
+}
+
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: '';
+  clear: both;
+  height: 0;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+body {
+  max-width: 100vw;
+  margin: auto;
+  background-color: #0D0D0D;
+}
+
+.home-background {
+  background: url(../shoe-kloset/header-image.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 50vw;
+  margin-top: -1rem;
+}
+
+.home-background h1 {
+  color: #4C0341;
+  line-height: calc(64px * 1.25);
+  font-family: "Pompiere", cursive;
+  font-size: calc(110px * 1.25);
+  font-weight: 200;
+  width: 25%;
+  margin-top: 8rem;
+  margin-left: 12rem;
+}
+
+.home-background .home-box-header {
+  margin-top: -24rem;
+  z-index: 15;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.under-the-sea {
+  background-color: #FAE5FF;
+  height: 42vw;
+  margin-top: -1.3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.under-the-sea .text-container {
+  margin: 350px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.under-the-sea .text-container h4 {
+  color: #4C0341;
+  line-height: 1.2px;
+  text-transform: uppercase;
+  font-family: "Pompiere", cursive;
+  font-size: 60px;
+  font-weight: 200;
+  margin: 2rem 0 2rem 0;
+}
+
+.under-the-sea .text-container p {
+  font-family: "Lato", sans-serif;
+  font-size: 23px;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.under-the-sea .text-container a {
+  background-color: #4C0341;
+  color: #FFFFFF;
+  letter-spacing: 1px;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 18px 28px;
+  margin: 1rem 0 0 0;
+  width: 250px;
+  -webkit-transition: ease 0.1s;
+  transition: ease 0.1s;
+  font-family: "Lato", sans-serif;
+  font-size: 22.5px;
+  font-weight: 400;
+}
+
+.under-the-sea .text-container a:hover {
+  color: #FFFFFF;
+  background-color: #FE6F19;
+}
+
+.rm-wrapper {
+  background-color: #FFFFFF;
+  height: 53vw;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  gap: 250px;
+}
+
+.rm-wrapper .rm-container1, .rm-wrapper .rm-container2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.rm-wrapper .rm-container1 h6, .rm-wrapper .rm-container2 h6 {
+  color: #0D0D0D;
+  letter-spacing: 1.3px;
+  font-family: "Pompiere", cursive;
+  font-size: 50px;
+  font-weight: 200;
+  text-transform: uppercase;
+}
+
+.rm-container1 img {
+  margin-top: -3rem;
+  margin-right: 1.7rem;
+  -webkit-box-shadow: 3rem 3rem 0px #FE6F19;
+          box-shadow: 3rem 3rem 0px #FE6F19;
+}
+
+.rm-container1 h6 {
+  border: solid 2px #4C0341;
+  text-align: right;
+  margin: 10rem 0 1rem 0;
+}
+
+.rm-container1 p {
+  border: solid 2px #4C0341;
+  font-family: "Lato", sans-serif;
+  line-height: 1.5;
+  font-size: 24px;
+  text-align: right;
+  margin: 0 0 0 12rem;
+}
+
+.rm-container1 a {
+  border: solid 2px #4C0341;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #FFFFFF;
+  padding: 15px;
+  background-color: #882C07;
+  font-family: "Lato", sans-serif;
+  font-size: 24px;
+  text-align: right;
+}
+
+.rm-container2 img {
+  margin-top: 8rem;
+  -webkit-box-shadow: -3rem 3rem 0px #FE6F19;
+          box-shadow: -3rem 3rem 0px #FE6F19;
+}
+
+.rm-container2 h6 {
+  border: solid 2px #4C0341;
+  text-align: right;
+}
+
+.rm-container2 p {
+  border: solid 2px #4C0341;
+  text-align: right;
+}
+
+.rm-container2 a {
+  border: solid 2px #4C0341;
+  text-align: right;
+}
+
+.logo {
+  font-family: "Pompiere", cursive;
+  font-size: 45.8px;
+  line-height: 46px;
+  letter-spacing: 1.1px;
+  color: #0D0D0D;
+  margin-top: -2rem;
+  margin-left: 12.4rem;
+  text-decoration: none;
+}
+
+.dt-nav ul li a,
+.mb-nav ul li a {
+  color: #0D0D0D;
+  letter-spacing: 1px;
+  text-decoration: none;
+  font-family: "Lato", sans-serif;
+  font-size: 22.5px;
+  font-weight: 700;
+}
+
+.mb-nav {
+  display: none;
+}
+
+.dt-nav ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding-top: 2.5rem;
+  margin-right: 8rem;
+}
+
+.dt-nav ul li {
+  margin-right: 1.7rem;
+}
+
+.dt-nav ul li a {
+  padding: 7px 13px;
+  -webkit-transition: ease 0.1s;
+  transition: ease 0.1s;
+}
+
+.dt-nav ul li a:hover {
+  background-color: #4C0341;
+  color: #FFFFFF;
 }
