--- a/styles/sass/home/_home.scss
+++ b/styles/sass/home/_home.scss
@@ -77,9 +77,11 @@
 }
 
 
+
+// Read More sections
 .rm-wrapper {
     background-color: $white;
-    height: 53vw;
+    height: 50.5vw;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
@@ -87,7 +89,6 @@
     .rm-container1, .rm-container2 {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
         h6 {
             @include h6-font;
             text-transform: uppercase;
@@ -95,19 +96,19 @@
     }
 }
 
+// left column
 .rm-container1 {
+    align-items: flex-end;
     img {
         margin-top: -3rem;
         margin-right: 1.7rem;
         box-shadow: 3rem 3rem 0px $orange;
     }
     h6 {
-        border: solid 2px $plum;
         text-align: right;
         margin: 10rem 0 1rem 0;
     }
     p {
-        border: solid 2px $plum;
         font-family: $content-font;
         line-height: 1.5;
         font-size: 24px;
@@ -115,27 +116,114 @@
         margin: 0 0 0 12rem;
     }
     a {
-        border: solid 2px $plum;
         @include read-more-button;
         text-align: right;
+        margin-top: 2rem;
     }
 }
 
+// right column
 .rm-container2 {
+    align-items: flex-start;
     img {
         margin-top: 8rem;
+        margin-left: 1.7rem;
         box-shadow: -3rem 3rem 0px $orange;
     }
     h6 {
-        border: solid 2px $plum;
         text-align: right;
+        margin: 6rem 0 1rem 0;
     }
     p {
-        border: solid 2px $plum;
-        text-align: right;
+        font-family: $content-font;
+        line-height: 1.5;
+        font-size: 24px;
+        text-align: left;
+        margin: 0 12rem 0 0;
     }
     a {
-        border: solid 2px $plum;
+        @include read-more-button;
         text-align: right;
+        margin-top: 2rem;
+    }
+}
+
+// Communication
+.communication {
+
+    background-color: $pink;
+    display: grid;
+    grid-template-columns: 1fr 3fr 3rem 3fr 1fr;
+    grid-template-rows: 7rem 12rem 3rem 12rem 9rem;
+    .comm-container {
+        border: solid 2px $plum;
+    }
+    .comm-container:nth-child(1) {
+        grid-column-start: 2;
+        grid-row-start: 2;
+        display: flex;
+        flex-wrap: wrap;
+        h3 {
+            @include h3-font;
+            margin: 0;
+        }
+        p {
+            font-family: $content-font;
+            font-size: 20px;
+            line-height: 24px;
+            margin-left: 3rem;
+        }
+    }
+    .comm-container:nth-child(2) {
+        background-color: $brown;
+        grid-column-start: 4;
+        grid-row-start: 2;
+        h3 {
+            @include h3-font;
+            margin: 0;
+        }
+        p {
+            font-family: $content-font;
+            font-size: 20px;
+            line-height: 24px;
+            margin-left: 3rem;
+        }
+    }
+    .comm-container:nth-child(3) {
+        background-color: $brown;
+        grid-column-start: 2;
+        grid-row-start: 4;
+        h3 {
+            @include h3-font;
+            margin: 0;
+        }
+        p {
+            font-family: $content-font;
+            font-size: 20px;
+            line-height: 24px;
+            margin-left: 3rem;
+        }
+    }
+    .comm-container:nth-child(4) {
+        background-color: $brown;
+        grid-column-start: 4;
+        grid-row-start: 4;
+        h3 {
+            @include h3-font;
+            margin: 0;
+            i {
+                border: solid 15px $plum;
+                border-radius: 50%;
+                background-color: $plum;
+                font-size: 26px;
+                color: $white;
+            }
+        }
+        p {
+            font-family: $content-font;
+            font-size: 20px;
+            line-height: 24px;
+            margin-left: 3rem;
+        }
     }
 }
