home desktop ver. is finished

--- a/styles/sass/home/_home.scss
+++ b/styles/sass/home/_home.scss
@@ -45,9 +45,7 @@
             margin: 2rem 0 2rem 0;
         }
         p {
-            font-family: $content-font;
-            font-size: 23px;
-            line-height: 1.5;
+            @include p-font;
             text-align: center;
         }
 
@@ -93,6 +91,9 @@
             @include h6-font;
             text-transform: uppercase;
         }
+        p {
+            @include p-font;
+        }
     }
 }
 
@@ -109,9 +110,6 @@
         margin: 10rem 0 1rem 0;
     }
     p {
-        font-family: $content-font;
-        line-height: 1.5;
-        font-size: 24px;
         text-align: right;
         margin: 0 0 0 12rem;
     }
@@ -135,10 +133,6 @@
         margin: 6rem 0 1rem 0;
     }
     p {
-        font-family: $content-font;
-        line-height: 1.5;
-        font-size: 24px;
-        text-align: left;
         margin: 0 12rem 0 0;
     }
     a {
@@ -150,80 +144,110 @@
 
 // Communication
 .communication {
-
     background-color: $pink;
     display: grid;
-    grid-template-columns: 1fr 3fr 3rem 3fr 1fr;
-    grid-template-rows: 7rem 12rem 3rem 12rem 9rem;
+    grid-template-columns: 1fr 3fr 2rem 3fr 1fr;
+    grid-template-rows: 9rem 12rem 3.7rem 12rem 9rem;
     .comm-container {
-        border: solid 2px $plum;
+        .heading {
+            margin: 0;
+            span {
+                font-size: 1.8em;
+                i:nth-child(1) {
+                    color: $plum;
+                }
+                i:nth-child(2) {
+                    color: white;
+                }
+            }
+            h3 {
+                @include h3-font;
+                display: inline-block;
+                position: relative;
+                top: 1.5rem;
+                margin: 0 0 0 1rem;
+            }
+        }
+        p {
+            @include p-font;
+            margin-top: 1rem;
+            margin-left: 5.8rem;
+        }
     }
     .comm-container:nth-child(1) {
         grid-column-start: 2;
         grid-row-start: 2;
-        display: flex;
-        flex-wrap: wrap;
-        h3 {
-            @include h3-font;
-            margin: 0;
         }
-        p {
-            font-family: $content-font;
-            font-size: 20px;
-            line-height: 24px;
-            margin-left: 3rem;
-        }
-    }
     .comm-container:nth-child(2) {
-        background-color: $brown;
         grid-column-start: 4;
         grid-row-start: 2;
-        h3 {
-            @include h3-font;
-            margin: 0;
         }
-        p {
-            font-family: $content-font;
-            font-size: 20px;
-            line-height: 24px;
-            margin-left: 3rem;
-        }
-    }
     .comm-container:nth-child(3) {
-        background-color: $brown;
         grid-column-start: 2;
         grid-row-start: 4;
-        h3 {
-            @include h3-font;
-            margin: 0;
         }
-        p {
-            font-family: $content-font;
-            font-size: 20px;
-            line-height: 24px;
-            margin-left: 3rem;
-        }
-    }
     .comm-container:nth-child(4) {
-        background-color: $brown;
         grid-column-start: 4;
         grid-row-start: 4;
-        h3 {
-            @include h3-font;
-            margin: 0;
-            i {
-                border: solid 15px $plum;
-                border-radius: 50%;
-                background-color: $plum;
-                font-size: 26px;
-                color: $white;
-            }
+        }
+}
+
+//Oxford shoes banner
+.banner {
+    background: url(../shoe-kloset/banner.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 31vw;
+}
+
+
+// Populat This Month
+
+.popular-month {
+    background-color: $white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30vw;
+    img {
+        box-shadow: 3rem 3rem 0px $orange;
+    }
+    .texts {
+        width: 50%;
+        margin: 0 0 0 10rem;
+        h5 {
+            @include h5-font;
+            text-transform: uppercase;
+            font-weight: 200;
+            margin: 7rem 0 3rem 0;
         }
         p {
-            font-family: $content-font;
-            font-size: 20px;
-            line-height: 24px;
-            margin-left: 3rem;
+            @include p-font;
+            margin-bottom: 3.5rem;
         }
+        a {
+            @include read-more-button;
+        }
+    }
+}
+
+
+// 3 images
+section {
+    background-color: $pink;
+    height: 35vw;
+    display: flex;
+    justify-content: center;
+    align-content: space-around;
+    align-items: center;
+    margin-bottom: 0;
+    img:nth-child(1) {
+        margin: 0 1.5rem 0 0;
+    }
+    img:nth-child(2) {
+        margin: 0 1.5rem 0 1.5rem;
+    }
+    img:nth-child(3) {
+        margin: 0 0rem 0 1.5rem;
     }
 }
