--- a/styles/sass/home/_home.scss
+++ b/styles/sass/home/_home.scss
@@ -1,8 +1,8 @@
 // header
-
 .home-background {
     background: url(../shoe-kloset/header-image.jpg);
     @include hero-style;
+    height: 50vw;
     
     // h1
     h1 {
@@ -16,8 +16,8 @@
     .home-box-header {
     margin-top: -24rem;
     z-index: 15;
-    display: flex;
-    justify-content: flex-end;
+    position: absolute;
+    right: 0;
 }
 }
 
@@ -40,7 +40,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        h4 {
+        h2 {
             @include h4-font;
             margin: 2rem 0 2rem 0;
         }
@@ -87,7 +87,7 @@
     .rm-container1, .rm-container2 {
         display: flex;
         flex-direction: column;
-        h6 {
+        h3 {
             @include h6-font;
             text-transform: uppercase;
         }
@@ -105,7 +105,7 @@
         margin-right: 1.7rem;
         box-shadow: 3rem 3rem 0px $orange;
     }
-    h6 {
+    h3 {
         text-align: right;
         margin: 10rem 0 1rem 0;
     }
@@ -124,11 +124,10 @@
 .rm-container2 {
     align-items: flex-start;
     img {
-        margin-top: 8rem;
-        margin-left: 1.7rem;
+        margin-top: 5rem;
         box-shadow: -3rem 3rem 0px $orange;
     }
-    h6 {
+    h3 {
         text-align: right;
         margin: 6rem 0 1rem 0;
     }
@@ -160,7 +159,7 @@
                     color: white;
                 }
             }
-            h3 {
+            h4 {
                 @include h3-font;
                 display: inline-block;
                 position: relative;
@@ -217,6 +216,7 @@
         margin: 0 0 0 10rem;
         h5 {
             @include h5-font;
+            font-size: 52px;
             text-transform: uppercase;
             font-weight: 200;
             margin: 7rem 0 3rem 0;
