--- a/styles/sass/layout/_footer.scss
+++ b/styles/sass/layout/_footer.scss
@@ -1,15 +1,16 @@
 footer {
     background-color: $brown;
     height: 45px;
-    margin-top: -1.3rem;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
     p {
         font-family: $content-font;
         font-size: 20px;
         font-weight: 100;
         color: $white;
+        padding-top: 0.7rem;
+        margin: 0;
     }
 }
